Change events cog to scraper

--- a/config.json
+++ b/config.json
@@ -15,5 +15,8 @@
         "Mountain Dew history",
         "Mountain Dew flavors",
         "Fortnite knowledge"
-    ]
+    ],
+
+    "soundcloud_link": "https://soundcloud.com/nightkingale",
+    "youtube_link": "https://www.youtube.com/@Nightkingale"
 }
