--- a/config.json
+++ b/config.json
@@ -1,22 +1,26 @@
 {
-    "#chat-hangout": 1127657272315740260,
-    "#bot-discussion": 1011344305966821508,
-    "#repository-log": 1127330813835485315,
-
-    "discussion_starters": [
-        "Wii U hacking",
-        "Wii U games",
-        "Wii hacking",
-        "Wii games",
-        "Nintendo 3DS hacking",
-        "Nintendo 3DS games",
-        "Nintendo Switch hacking",
-        "Nintendo Switch games",
-        "Mountain Dew history",
-        "Mountain Dew flavors",
-        "Fortnite knowledge"
-    ],
-
-    "soundcloud_link": "https://soundcloud.com/nightkingale",
-    "youtube_link": "https://www.youtube.com/@Nightkingale"
+    "channels": {
+        "#chat-hangout": 1127657272315740260,
+        "#bot-discussion": 1011344305966821508,
+        "#repository-log": 1127330813835485315
+    },
+    "discuss": {
+        "discussion_starters": [
+            "Wii U hacking",
+            "Wii U games",
+            "Wii hacking",
+            "Wii games",
+            "Nintendo 3DS hacking",
+            "Nintendo 3DS games",
+            "Nintendo Switch hacking",
+            "Nintendo Switch games",
+            "Mountain Dew history",
+            "Mountain Dew flavors",
+            "Fortnite knowledge"
+        ]
+    },
+    "scraper": {
+        "soundcloud_link": "https://soundcloud.com/nightkingale",
+        "youtube_link": "https://www.youtube.com/@Nightkingale"
+    }
 }
