Add more discussion starters

--- a/config.json
+++ b/config.json
@@ -15,9 +15,26 @@
             "Nintendo 3DS games",
             "Nintendo Switch hacking",
             "Nintendo Switch games",
+            "Pokémon knowledge",
+            "Minecraft knowledge",
+            "Fortnite knowledge",
+            "Video game history",
+            "Video game consoles",
+            "Video game soundtracks",
+            "Competitive gaming",
+            "Virtual reality",
+            "Augmented reality",
+            "Computer history",
+            "Ethical hacking",
+            "Cyber security",
+            "Programming languages",
+            "Game design principles",
+            "Game development tools",
+            "Raspberry Pi projects",
+            "Smart home automation ideas",
             "Mountain Dew history",
             "Mountain Dew flavors",
-            "Fortnite knowledge"
+            "Mountain Dew exclusive flavors"
         ]
     },
     "scraper": {
