Update config with new channel name and role

--- a/config/config.json
+++ b/config/config.json
@@ -9,13 +9,14 @@
         "#introductions": 1246257135529103561,
         "#friend-codes": 1246280624566960198,
         "#minecraft-chat": 1249753205307478058,
-        "#bot-commands": 1011344305966821508,
+        "#raichu-terminal": 1011344305966821508,
         "#github-logs": 725045178720583756,
         "#development": 1246622108663021639
     },
     "roles": {
         "@Server Bot": 450886915340763151,
         "@Server Owner": 1238893958159925391,
+        "@Bad Time Quartet": 1193307083647484004,
         "@Server Moderator": 450903750648004608,
         "@Server Booster": 616335384791482389,
         "@Server Supporter": 1192190765288411277
